# vsomeipapp

./: CMakeLists.txt  README.md  client.cpp  client_config.json  server.cpp  server_config.json
